--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,9 @@
                   ],
                   "asset/*": [
                         "asset/*"
+                  ],
+                  "Storybook/*": [
+                        "Storybook/*"
                   ]
             }
       },
