--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,9 @@
           "config/*": [
             "config/*"
           ],
+          "Component/*": [
+            "Component/*"
+          ],
           "hook/*": [
             "hook/*"
           ],
