--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.16.4",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
